# ToyGameEngine

./: .gitignore  CMakeLists.txt  LICENSE_bundled.txt  README.md
inc/BackGround/: BackGround.hpp  BackGroundGroup.hpp
inc/Canvas/: Canvas.hpp  CanvasT.hpp  Canvas_Impl.hpp  GeometryGroup.hpp
inc/Demo/: MainWindow.hpp  Player.hpp
inc/Math/Collision/: Algorithm.hpp  CollisionDetector.hpp  DirectMode.hpp  GridMap.hpp  QuadTree.hpp
inc/Math/Geometry/: AABBRect.hpp  Algorithm.hpp  AllGeometryObjects.hpp  Bezier.hpp  Circle.hpp  Collision.hpp  GeometryObject.hpp  Line.hpp  Point.hpp  Polygon.hpp  Polyline.hpp  Rectangle.hpp  Square.hpp  Sutherland_Hodgman.hpp  Triangle.hpp
inc/Math/Matrix/: Algorithm.hpp  Matrix.hpp
inc/Resource/: ResManager.hpp
inc/Scene/: Event.hpp  KeyCode.hpp  Scene.hpp
inc/Sounds/: Sound.hpp  SoundsGroup.hpp
inc/Spirit/: Character.hpp  Player.hpp  ShapedSpirit.hpp  Spirit.hpp  SpiritGroup.hpp
inc/Utils/: PixmapUtils.hpp  ThreadPool.hpp  Utils.hpp
src/: CMakeLists.txt
src/BackGround/: BackGoundGroup.cpp  BackGround.cpp
src/Canvas/: Canvas.cpp  GeometryGroup.cpp
src/Demo/: MainWindow.cpp  MainWindow.ui  main.cpp
src/Math/Collision/: Algorithm.cpp  DirectMode.cpp  GridMap.cpp  QuadTree.cpp
src/Math/Geometry/: AABBRect.cpp  Algorithm.cpp  Bezier.cpp  Circle.cpp  Collision.cpp  GeometryObject.cpp  Line.cpp  Point.cpp  Polygon.cpp  Polyline.cpp  Rectangle.cpp  Square.cpp  Sutherland_Hodgman.cpp  Triangle.cpp
src/Scene/: Scene.cpp
src/Sounds/: Sound.cpp  SoundsGroup.cpp
src/Spirit/: Spirit.cpp  SpiritGroup.cpp
(+1 files in other folders)
